Feature and weekly cards

--- a/index.html
+++ b/index.html
@@ -44,5 +44,106 @@
         <a href="">Realidade Virtual</a>
       </nav>
     </header>
+    <main class="container">
+      <section id="featured" class="grid grid-flow-col">
+        <figure id="lg-featured" class="card">
+          <img src="assets/images/Image 01.png" alt="" />
+          <figcaption style="padding: 24px">
+            <span class="tag">Robótica</span>
+            <h2 style="font: var(--h1)">
+              Robôs domésticos começam a ser adotados para tarefas diárias,
+              prometendo mais conforto e eficiência nas residências.
+            </h2>
+          </figcaption>
+        </figure>
+        <div id="sm-featured">
+          <figure class="card">
+            <img src="assets/images/Image 02.png" alt="" />
+            <figcaption>
+              <span class="tag">Hologramas</span>
+              <h2 style="font: var(--h3)">
+                Novo Smartphone Projetor 3D chega ao mercado, transformando a
+                forma como vemos nossas telas!
+              </h2>
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img src="assets/images/Image 03.png" alt="" />
+            <figcaption>
+              <span class="tag">Internet</span>
+              <h2 style="font: var(--h3)">
+                Tecnologia 6G chega às metrópoles brasileiras, prometendo
+                revolucionar a forma como vivemos e nos comunicamos.
+              </h2>
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img src="assets/images/Image 04.png" alt="" />
+            <figcaption>
+              <span class="tag">Vestíveis</span>
+              <h2 style="font: var(--h3)">
+                Empresa lança relógio inteligente capaz de monitorar a saúde
+                mental, oferecendo insights valiosos para o bem-estar pessoal.
+              </h2>
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img src="assets/images/Image 05.png" alt="" />
+            <figcaption>
+              <span class="tag">Realidade Virtual</span>
+              <h2 style="font: var(--h3)">
+                Escolas adotam a tecnologia VR para proporcionar experiências
+                imersivas, transformando a aprendizagem tradicional.
+              </h2>
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+      <section class="weekly">
+        <nav class="flexbt">
+          <p>Mais lidas da semana</p>
+          <a href="#">
+            <p>
+              Ver tudo
+              <img src="assets/icons/ArrowRight.svg" alt="ArrowRight" />
+            </p>
+          </a>
+        </nav>
+        <div id="cardweekly" class="grid">
+          <figure class="weekly-feature card2">
+            <p class="tag">Veículos</p>
+            <img src="assets/images/Image 06.png" alt="" />
+            <p style="font: var(--h3)">
+              Protótipo de veículo voador é apresentado, marcando o início da
+              era dos transportes aéreos pessoais.
+            </p>
+          </figure>
+          <figure class="weekly-feature card2">
+            <p class="tag">Hologramas</p>
+            <img src="assets/images/Image 07.png" alt="" />
+            <p style="font: var(--h3)">
+              Plataforma de videoconferência apresenta nova função de
+              hologramas, tornando as chamadas
+            </p>
+          </figure>
+          <figure class="weekly-feature card2">
+            <p class="tag">Realidade virtual</p>
+            <img src="assets/images/Image 08.png" alt="" />
+            <p style="font: var(--h3)">
+              Nova geração de consoles de videogame é lançada, trazendo gráficos
+              ultra-realistas e experiências
+            </p>
+          </figure>
+          <figure class="weekly-feature card2">
+            <p class="tag">Internet</p>
+            <img src="assets/images/Image 09.png" alt="" />
+            <p style="font: var(--h3)">
+              Projeto busca oferecer internet de alta velocidade em áreas
+              remotas através de satélites.
+            </p>
+          </figure>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
