--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </section>
       <section class="weekly">
         <nav class="flexbt">
-          <p>Mais lidas da semana</p>
+          <p style="color: var(--text-color-secondary)">Mais lidas da semana</p>
           <a href="#">
             <p>
               Ver tudo
@@ -142,6 +142,179 @@
               remotas através de satélites.
             </p>
           </figure>
+        </div>
+      </section>
+      <section id="bottom">
+        <div id="ia">
+          <nav>
+            <p style="color: var(--text-color-secondary); font: var(--text-sm)">
+              Destaques de Inteligência Artificial
+            </p>
+            <a href="#">
+              <p style="font: var(--text-sm)">
+                Ver tudo <img src="assets/icons/ArrowRight.svg" alt="" />
+              </p>
+            </a>
+          </nav>
+          <div id="ia-featured">
+            <figure class="card3">
+              <div class="info">
+                <p class="tag">Inteligência Artificial</p>
+                <h2 style="font: var(--h2)">
+                  Empresa surpreende o mundo ao anunciar um algoritmo capaz de
+                  prever eventos futuros com alta precisão.
+                </h2>
+                <p style="color: var(--text-color-secondary)">
+                  Em um avanço surpreendente da inteligência artificial, uma
+                  empresa anuncia o desenvolvimento de um algoritmo capaz de
+                  prever eventos futuros com notável precisão. Descubra como
+                  essa tecnologia está desafiando as fronteiras da previsão e
+                  quais são as implicações para diversas áreas, desde finanças
+                  até planejamento estratégico.
+                </p>
+              </div>
+              <img src="assets/images/Image 10.png" alt="" />
+            </figure>
+            <figure class="card3">
+              <div class="info">
+                <p class="tag">Inteligência Artificial</p>
+                <h2 style="font: var(--h2)">
+                  Dispositivo portátil promete traduzir instantaneamente
+                  diferentes idiomas, facilitando a comunicação global.
+                </h2>
+                <p style="color: var(--text-color-secondary); overflow: scroll">
+                  Em um mundo cada vez mais conectado, a comunicação sem
+                  fronteiras é essencial. Nesse contexto, um dispositivo
+                  portátil surge como um verdadeiro herói linguístico,
+                  prometendo quebrar as barreiras idiomáticas instantaneamente.
+                  Imagine poder se comunicar fluentemente em qualquer lugar do
+                  mundo, independentemente do idioma local. Este dispositivo não
+                  é mais uma visão futurista, mas uma realidade impressionante
+                  que está transformando a forma como nos conectamos
+                  globalmente. Nesta reportagem, mergulharemos nas
+                  funcionalidades deste dispositivo revolucionário e como ele
+                  está moldando uma nova era de compreensão global.
+                </p>
+              </div>
+              <img src="assets/images/Image 11.png" alt="" />
+            </figure>
+            <figure class="card3">
+              <div class="info">
+                <p class="tag">Inteligência Artificial</p>
+                <h2 style="font: var(--h2)">
+                  Criados para auxiliar idosos, robôs de companhia ganham
+                  popularidade, oferecendo suporte emocional aos usuários.
+                </h2>
+                <p style="color: var(--text-color-secondary); overflow: scroll">
+                  A tecnologia não só avança, mas também busca tornar a vida
+                  mais significativa para todas as gerações. No cenário atual,
+                  os robôs sociais, projetados especialmente para oferecer apoio
+                  e companhia aos idosos, estão ganhando destaque. Mais do que
+                  meros assistentes, esses robôs são programados para fornecer
+                  suporte emocional e físico, preenchendo lacunas nas
+                  necessidades de cuidado. Nesta matéria, exploraremos como
+                  esses companheiros tecnológicos estão impactando positivamente
+                  a qualidade de vida da terceira idade e proporcionando uma
+                  nova perspectiva sobre o envelhecimento.
+                </p>
+              </div>
+              <img src="assets/images/Image 12.png" alt="" />
+            </figure>
+            <figure class="card3">
+              <div class="info">
+                <p class="tag">Inteligência Artificial</p>
+                <h2 style="font: var(--h2)">
+                  Aplicativo utiliza inteligência artificial para ajudar
+                  usuários a manterem o foco e aumentarem a produtividade no dia
+                  a dia.
+                </h2>
+                <p style="color: var(--text-color-secondary); overflow: scroll">
+                  No turbilhão da vida moderna, onde distrações são abundantes,
+                  um aplicativo inovador surge como um aliado indispensável para
+                  quem busca maior concentração e eficiência no cotidiano.
+                  Utilizando avançados algoritmos de inteligência artificial,
+                  este aplicativo promete mais do que simplesmente gerenciar
+                  tarefas; ele está programado para compreender os padrões de
+                  trabalho de cada usuário, oferecendo sugestões personalizadas
+                  para otimizar o tempo e maximizar a produtividade. Nesta
+                  matéria, exploraremos como essa ferramenta tecnológica está se
+                  tornando a chave para manter o foco em um mundo cada vez mais
+                  cheio de distrações, transformando a maneira como encaramos
+                  nossas responsabilidades diárias.
+                </p>
+              </div>
+              <img src="assets/images/Image 13.png" alt="" />
+            </figure>
+          </div>
+        </div>
+        <div id="ad-aside">
+          <img src="assets/Ads.png" alt="" />
+          <div id="lookthis">
+            <nav>
+              <p
+                style="color: var(--text-color-secondary); font: var(--text-sm)"
+              >
+                Viu isso aqui?
+              </p>
+              <a href="" style="font: var(--text-sm)">
+                <p>Ver tudo <img src="assets/icons/ArrowRight.svg" alt="" /></p>
+              </a>
+            </nav>
+            <figure>
+              <img src="assets/images/Image 14.png" alt="" />
+              <div class="info">
+                <p class="tag">Software</p>
+                <p style="font: var(--h3)">
+                  Aplicativo de monitoramento ambiental ganha destaque,
+                  incentivando práticas ecológicas e promovendo a
+                  conscientização.
+                </p>
+              </div>
+            </figure>
+            <figure>
+              <img src="assets/images/Image 15.png" alt="" />
+              <div class="info">
+                <p class="tag">Realidade Virtual</p>
+                <p style="font: var(--h3)">
+                  Óculos de realidade virtual com feedback tátil proporcionam
+                  uma experiência sensorial completa, imergindo usuários em
+                  ambientes digitais.
+                </p>
+              </div>
+            </figure>
+            <figure>
+              <img src="assets/images/Image 16.png" alt="" />
+              <div class="info">
+                <p class="tag">Criptomoedas</p>
+                <p style="font: var(--h3)">
+                  Surge uma nova moeda digital baseada em tecnologias
+                  sustentáveis, buscando minimizar o impacto ambiental associado
+                  à mineração de criptomoedas.
+                </p>
+              </div>
+            </figure>
+            <figure>
+              <img src="assets/images/Image 17.png" alt="" />
+              <div class="info">
+                <p class="tag">Drones</p>
+                <p style="font: var(--h3)">
+                  Empresas de e-commerce implementam frota de drones para
+                  entregas rápidas, transformando o cenário do comércio online.
+                </p>
+              </div>
+            </figure>
+            <figure>
+              <img src="assets/images/Image 18.png" alt="" />
+              <div class="info">
+                <p class="tag">Impressão 3D</p>
+                <p style="font: var(--h3)">
+                  Tecnologia inovadora permite a impressão 3D de órgãos humanos,
+                  revolucionando a medicina e a lista de espera por
+                  transplantes.
+                </p>
+              </div>
+            </figure>
+          </div>
         </div>
       </section>
     </main>
